# vole

./: .gitignore  CMakeLists.txt
cmake/: import_fmt.cmake  import_gtest.cmake  import_json.cmake
docs/: Language_Reference.md
include/vole/: datamodel.hpp  datamodel_parsers.hpp  exception.hpp  node_printer.hpp  render.hpp
src/: datamodel.cpp  datamodel_parsers.cpp  exception.cpp  main.cpp  node_printer.cpp  render.cpp
tests/: CMakeLists.txt  datamodel_parser_tests.cpp  datamodel_tests.cpp
tests/helpers/: assertions.h  visualizers.hpp
